<resources>
    <string name="app_name">RoundnetTracker</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_past_match">Past Match</string>
    <string name="menu_rules">Rules</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_teams">Team</string>

    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="logout">Log out</string>
    <string name="add">Add</string>
    <string name="finishGame">Finish game</string>
    <string name="takePicture">Take a picture</string>

    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="email">Email</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="birthday">Birthday</string>

    <string name="addition" translatable="false">+</string>
    <string name="sub" translatable="false">-</string>

    <string name="team1">Team 1</string>
    <string name="team2">Team 2</string>
    <string name="gameName">Game name</string>
    <string name="createGame">Create game</string>
    <string name="teamName">Team name</string>
    <string name="teamLocalisation">Team localisation</string>
    <string name="equality">Equality !</string>
    <string name="saveGame">Sauvegarder sur le cloud</string>

    <string name="handEmoji" translatable="false">👋🏻</string>
    <string name="homeWelcomeText">Welcome </string>
    <string name="live" translatable="false">live </string>
    <string name="versus" translatable="false">vs </string>
    <string name="noLive">No live game</string>

    !-- Errors or informations -->
    <string name="loginError">Username or password incorrect</string>
    <string name="SettingsTextViewLanguage">Your language</string>
    <string name="registerUserError">Error encountered</string>
    <string name="registerUserOK">User created, you can now login !</string>
    <string name="createTeamError">Cannot create empty team</string>
    <string name="createGameError">Cannot create empty Game</string>
    <string name="createGameSucess">Game created with success !</string>
    <string name="cloudSaveSucess">Cloud backup with success !</string>

    <string name="title_activity_register">RegisterActivity</string>

    <string name="Rules">
         The sport is played in teams of 2 against 2 distributed around the net. Players on the same team stand side by side before the serve; once the ball is in play, players can move around the net. The ball must be hit every time. The ball is put into play by a serve that must bounce over the net to the opposing team. The receiving team can make up to 3 touches, alternating between the players, before returning the ball to the other team by bouncing it on the net. Note that the servers must be behind the service line for the service to be valid.
        A point is scored when the ball touches the ground or the ring of the net or when it bounces more than once on the net. A point is scored in all games, regardless of which team has possession of the serve. When a team scores a point, the service goes to them. With each service win, the serving player must alternate. The serving player must switch positions with his or her teammate on each serve, if the team holds it for several points. The match ends when a team reaches the designated number of points, typically 15 or 21 points, with at least a two-point difference.
        There are also variations for 2, 3 and 6 players.
        </string>
    <string name="RulesTitle">Rules : </string>
    <string name="EquipmentTitle">Equipment :</string>
    <string name="Equipment">
        The net is 3 feet in diameter and 8 inches high.
        The net is mounted on a ring divided into five parts and five removable legs for easy transportation.
        The tension of the net should be adjusted so that it is even over the entire surface. A ball dropped from a height of 5 feet from the ground should bounce approximately 20 inches from the net.
        The ball should be inflated to a circumference of 12 inches.
        A flat court (beach, grass, gym, etc.) of approximately 30 feet by 30 feet is recommended to have enough playing space without obstruction. There are no court boundaries.
        A service line 7 feet from the edge of the net or 8.5 feet from the center of the net should be drawn, if possible, to mark the service position
    </string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>