<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/icons8_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />

        <item
            android:id="@+id/nav_team"
            android:icon="@drawable/icons8_groupe_d_utilisateurs_homme_femme_90"
            android:title="@string/menu_teams" />

        <item
            android:id="@+id/nav_past_match"
            android:icon="@drawable/icons8_timer_96"
            android:title="@string/menu_past_match" />
        <item
            android:id="@+id/nav_rules"
            android:icon="@drawable/icons8_rules_100"
            android:title="@string/menu_rules" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/icons8_setting_256"
            android:title="@string/menu_settings" />

    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title=""
                app:actionLayout="@layout/drawer_button"
                app:showAsAction="ifRoom"/>
        </menu>
    </item>
</menu>