<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="fr.hamchez.roundnettracker.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="fr.hamchez.roundnettracker.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_team"
        android:name="fr.hamchez.roundnettracker.ui.team.TeamFragment"
        android:label="@string/menu_teams"
        tools:layout="@layout/fragment_team" />

    <fragment
        android:id="@+id/nav_past_match"
        android:name="fr.hamchez.roundnettracker.ui.pastMatch.PastMatchFragment"
        android:label="@string/menu_past_match"
        tools:layout="@layout/fragment_past_match" />

    <fragment
        android:id="@+id/nav_rules"
        android:name="fr.hamchez.roundnettracker.ui.rules.RulesFragment"
        android:label="@string/menu_rules"
        tools:layout="@layout/fragment_past_match" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="fr.hamchez.roundnettracker.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_past_match" />
</navigation>